# altmo

./: .env-template  .gitignore  README.md  WORKLOG.md  altmo-config.yml  pyproject.toml
.github/workflows/: python-package.yml
altmo/: batches.py  errors.py  idw.py  main.py  settings.py  utils.py  validators.py
altmo/api/: valhalla.py
altmo/commands/: build.py  calculate_zscores.py  create_study_area.py  create_study_area_parts.py  export.py  network_distances.py  raster.py  raster_rough.py  schema.py  straight_distances.py
altmo/data/: decorators.py  extras.py  read.py  result_sets.py  schema.py  types.py  utils.py  write.py
docs/: altmo-analysis-instructions.md  conf.py  index.rst
docs/tutorials/: basic.rst  getting_started.rst  setting_up_the_config_file.rst
examples/: altmo-config.yml
examples/boundaries/: greater_kiel.geojson  greater_kiel_boundary.geojson  stockholm_boundary.geojson
notebooks/: Altmo EDA.ipynb  Bar Chart Example.ipynb  Combination Survey Results.ipynb  Results Section Statistics.ipynb  Valhalla Requests Debug.ipynb
sql/: network_queries.sql
tests/: conftest.py  test_main.py
tests/commands/: test_build.py  test_create_study_area.py  test_export.py  test_network_distances.py
tests/fixtures/: amenity.py  boundary.py  config_data.py  straight_distance.py  valhalla.py
