[tool.poetry]
name = "altmo"
version = "0.1.0"
description = "Tools for building maps about alternative mobility using Open Street Map data"
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
psycopg2 = "^2.8.6"
click = "^8.0.1"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
altmo = 'altmo.main:cli'
