[tool.poetry]
name = "altmo"
version = "0.1.2"
description = "Tools for mapping walkability and bikeability using Open Street Map data"
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]
license = "GPLv3"
readme = 'README.md'
homepage = 'https://altmo.readthedocs.io'
documentation = 'https://altmo.readthedocs.io'
repository = 'https://github.com/travishathaway/altmo'
keywords = ['OpenStreetMap', 'GIS']

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
psycopg2 = "^2.8.6"
click = "^8.0.1"
tqdm = "^4.61.0"
PyYAML = "^6.0"
aiopg = "^1.3.3"

# Extras
pygdal = { version = "3.2.1.10", optional = true }
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
aiocsv = "^1.2.1"

[tool.poetry.extras]
raster = ["pygdal"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
jupyterlab = "^3.2.2"
Sphinx = "^4.3.1"
recommonmark = "^0.7.1"
pytest-mock = "^3.6.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
altmo = 'altmo.main:cli'
